2007-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c (ClonePixelCache): Eliminate bug when
	size_t is an unsigned type.

2007-07-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Address security issue noted by
	CVE-2006-0082
	http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2006-0082 in
	which output filenames matching arbitrary printf specifications
	may cause GraphicsMagick to crash.
	* magick/utility.c (TranslateTextEx): New version of TranslateText
	which allows copying each attribute via a user-provided callback
	function.
	* magick/delegate.c (InvokeDelegate): Implement secure delegate
	execution in POSIX environments in order to avoid injection of
	arbitrary shell commands via carefully crafted filenames.  Fixes
	Debian Bug 345238 "[CVE-2005-4601] Shell command injection in
	delegate code (via file names)"
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=345238

2007-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Fix pixel scaling problem caused by
	floating point rounding error.

2007-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h: Provide pread() and pwrite() prototypes if they
	are missing.
	* configure.ac: Check for missing pread() and pwrite() prototypes.
	* m4/ac_func_fseeko.m4: Use fixed version of AC_FUNC_FSEEKO.
	* magick/utility.c (SystemCommand): Avoid use of snprintf().

2007-07-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: Only replace getc_unlocked() and putc__unlocked()
	for a thread-safe build.
	* magick/studio.h: Always use fseeko() and ftello() if they are
	available.

2007-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c: The Kodak Cineon coder was such a disaster that
	this module is back-ported from the 1.2 development version.  Some
	features are lost in the process.  Resolves SourceForge issue
	1486657 "Can't extract single channel from Cineon format".
