@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2007-07-18  Daniel Kobras  &lt;kobras@debian.org&gt;
+
+<UL>
+  <LI> magick/quantize.c (GrayscalePseudoClassImage): Fix computation
+        of memory required for colormap index
+        (colormap_heap_overflow_fix).
+
+</UL>
+<p>
 2007-07-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
